--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - npm install -g @angular/cli
 
 script:
-  - ng build --prod --base-href https://github.com/WangWenGit/bitcoin-order-app.git
+  - ng build --prod --base-href https://github.io/WangWenGit/bitcoin-order-app/
 
 deploy:
   provider: pages
